/*
 * $Id: ChangeLog,v 1.1422 2003/09/07 23:12:13 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-07 19:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/codebloc.c
    * Removed 1 redundant registration of array owner. Registration already recorded at hb_memvarValueNew()

2003-09-07 16:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
  * source/vm/classes.c
  * source/vm/codebloc.c
  * source/vm/estack.c
  * source/vm/eval.c
  * source/vm/hvm.c
  * source/vm/memvars.c
    ! Corrected many instances of == HB_IT_ARRAY to HB_IS_ARRAY(...)

  * source/vm/codebloc.c
    ! Fixed memory leak related to new Array management and detached locals.

2003-09-06 19:54 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    * Moved all Array management debuging TraceLog() messages under #ifdef DEBUG_ARRAYS

  * source/vm/arrayshb.c
    % Optimized aDel() aIns() aSize() aFill(), aScan, aCopy() and aEval()

2003-09-06 19:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/browse.prg
    ! Added missing Clipper  behavior(edit/add/delete data)
  * source/rtl/hbffind.c
    ! Support for Directory("c:\","V") under windows

2003-09-06 13:42 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
    ! Fixed and optimized rddMoveFields()

  * source/vm/arrays.c
    * Added debugging related commented define.

  * source/vm/hvm.c
    ! Fixed invalid swaping of items, was using memcpy() instead of hb_itemSwap() in hb_vmSwapAlias().
      This was interfering with new Array Management.

2003-09-05 22:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
   *makefile.bc
      ! added missing dependencie to debug.lib

2003-09-05 03:14 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
   * utils/hbdict/Makefile
      ! added -j to compilation switches
